# interlock-mcp

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROTOCOL.md  SCHEMA.md  THREAT-MODEL.md
examples/: docker_ssh_deploy.py  filesystem_demo.py
src/interlock/: __init__.py  approval.py  audit.py  cli.py  engine.py  executor.py  hashing.py  policy.py  preconditions.py  schema.py  server.py  validate.py
src/interlock/adapters/: __init__.py  command.py
tests/: conftest.py  test_approval.py  test_audit.py  test_engine.py  test_example.py  test_executor.py  test_extensions.py  test_hashing.py  test_preconditions.py  test_validate.py
