[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interlock-mcp"
version = "0.2.0"
description = "A human-in-the-loop governance interlock for AI agents (MCP server): propose, countersign the exact plan, then execute stage-by-stage — precondition-checked, verified, audited."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Zigerus" }]
keywords = [
    "mcp", "model-context-protocol", "human-in-the-loop", "ai-agents",
    "agent-governance", "approval-workflow", "llmops", "deterministic", "audit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "rfc8785>=0.1.4",   # RFC-8785 JCS — canonical hashing (do NOT hand-roll)
    "ruamel.yaml>=0.18", # YAML 1.2 loader (NOT PyYAML — avoids the on/off->bool footgun)
    "jsonschema>=4.20",  # Draft 2020-12 structural validation
]

[project.optional-dependencies]
server = ["mcp>=1.2"]          # the FastMCP server surface
dev = ["pytest>=8", "mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/Zigerus/interlock-mcp"
Repository = "https://github.com/Zigerus/interlock-mcp"
Issues = "https://github.com/Zigerus/interlock-mcp/issues"

[project.scripts]
interlock-mcp = "interlock.server:main"
interlock = "interlock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/interlock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
